correccion errores deployment 1

--- a/.env
+++ b/.env
@@ -31,3 +31,4 @@ APP_SECRET=
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
+API_KEY='WeWelcom_Mauri'
