--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
             - mysql
         environment:
             APP_ENV: dev
-            DATABASE_URL: mysql://user:wewelcom@mysql_db:3306/wewelcom_db
+            DATABASE_URL: mysql://user:wewelcom@mysql:3306/wewelcom_db
             API_KEY: WeWelcom_Mauri
 
     mysql:
