--- a/.env
+++ b/.env
@@ -24,11 +24,10 @@ APP_SECRET=
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data_%kernel.environment%.db"
- DATABASE_URL="mysql://usuario_API:PruebaTecnica_2025@127.0.0.1:3306/pruebaAPI?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
+ DATABASE_URL="mysql://admin:admin@127.0.0.1:3306/pruebaAPI?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
-API_KEY='WeWelcom_Mauri'
